Updated scripts